cabal-version:      2.4
name:               haskell-things
version:            0.1.0.0

synopsis: "Just a exercises of haskell books"
description: "Haskell Studies Repository with book CIS 1940 (https://www.seas.upenn.edu/~cis1940/spring13/lectures.html)"

-- A URL where users can report bugs.
-- bug-reports:

license: MIT
author:             eramoss
maintainer:         edulramos@outlook.com

-- A copyright notice.
copyright: "Copyright (c) 2023 eramoss"

category: exercise
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/eramoss/haskell-things
library
    exposed-modules:  CreditCardEx

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-things
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        haskell-things

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-CreditCardEx
  type:               exitcode-stdio-1.0
  main-is:            CreditCardExTest.hs
  hs-source-dirs:     test
  build-depends:      base ^>=4.17.2.0,
                      test-framework,
                      test-framework-hunit,
                      HUnit,
                      haskell-things
  default-language: Haskell2010